--- a/pan-os.conf
+++ b/pan-os.conf
@@ -1,11 +1,5 @@
 input {
-    # Input for PAN-OS device logs
-    tcp {
-        host => "0.0.0.0"
-        port => "5514"
-        type => "tcp"
-        tags => [ "PAN-OS_syslog" ]
-    }
+    # Input for PAN-OS device log
     udp {
         host => "0.0.0.0"
         port => "5514"
@@ -180,28 +174,28 @@ output {
             hosts    => [ 'elasticsearch' ]
             index => "traffic-%{+YYYY.MM}"
         }
-        stdout { codec => rubydebug }
+        #stdout { codec => rubydebug }
     }
     else if "PAN-OS_threat" in [tags] {
         elasticsearch {
             hosts    => [ 'elasticsearch' ]
             index => "threat-%{+YYYY.MM}"
         }
-        stdout { codec => rubydebug }
+        #stdout { codec => rubydebug }
     }
     else if "PAN-OS_system" in [tags] {
         elasticsearch {
             hosts    => [ 'elasticsearch' ]
             index => "system-%{+YYYY.MM}"
         }
-        stdout { codec => rubydebug }
+        #stdout { codec => rubydebug }
     }
     else if "PAN-OS_config" in [tags] {
         elasticsearch {
             hosts    => [ 'elasticsearch' ]
             index => "config-%{+YYYY.MM}"
         }
-        stdout { codec => rubydebug }
+        #stdout { codec => rubydebug }
     }
     else if "metric" in [tags] {
         elasticsearch {
