Update SYSTEM headers

--- a/pan-os.conf
+++ b/pan-os.conf
@@ -103,10 +103,10 @@ filter {
             csv {
                 source => "message"
                 columns => [
-                    "FUTURE_USE", "Receive Time", "Serial Number", "Type", "Content/Threat Type", "FUTURE_USE", "Generated Time",
-                    "Virtual System", "Event ID", "Object", "FUTURE_USE", "FUTURE_USE", "Module", "Severity", "Description",
-                    "Sequence Number", "Action Flags", "Device Group Hierarchy Level 1", "Device Group Hierarchy Level 2", 
-                    "Device Group Hierarchy Level 3", "Device Group Hierarchy Level 4", "Virtual System Name", "Device Name"
+                    "Domain", "ReceiveTime", "SerialNumber", "Type", "Threat_ContentType", "Config Version", "GeneratedTime",
+                    "VirtualSystem", "EventID", "Object", "FMT", "ID", "Module", "Severity", "Description",
+                    "SequenceNumber", "ActionFlags", "DeviceGroupHierarchyLevel1", "DeviceGroupHierarchyLevel2", 
+                    "DeviceGroupHierarchyLevel3", "DeviceGroupHierarchyLevel4", "VirtualSystemName", "DeviceName"
                 ]
             }
             mutate {
