--- a/pan-os.conf
+++ b/pan-os.conf
@@ -86,11 +86,11 @@ filter {
             csv {
                 source => "message"
                 columns => [
-                    "FUTURE_USE", "Receive Time", "Serial Number", "Type", "Subtype", "FUTURE_USE", "Generated Time", 
-                    "Host","Virtual System", "Command", "Admin", "Client", "Result", "Configuration Path", 
-                    "Before Change Detail","After Change Detail", "Sequence Number", "Action Flags", 
-                    "Device Group Hierarchy Level 1","Device Group Hierarchy Level 2", "Device Group Hierarchy Level 3", 
-                    "Device Group Hierarchy Level 4","Virtual System Name", "Device Name"
+                    "Domain", "ReceiveTime", "SerialNumber", "Type", "Threat_ContentType", "Config Version","Generated Time", 
+                    "Host","VirtualSystem", "Command", "Admin", "Client", "Result", "ConfigurationPath", 
+                    "BeforeChangeDetail","AfterChangeDetail", "SequenceNumber", "ActionFlags", 
+                    "DeviceGroupHierarchyLevel1","DeviceGroupHierarchyLevel2", "DeviceGroupHierarchyLevel3", 
+                    "DeviceGroupHierarchyLevel4","VirtualSystemName", "DeviceName"
                 ]
     	    }
 	        mutate {
