Fix tagging on config and system log events

--- a/pan-os.conf
+++ b/pan-os.conf
@@ -94,7 +94,7 @@ filter {
                 ]
     	    }
 	        mutate {
-                add_tag => [ "PAN-OS_Config"]
+                add_tag => [ "PAN-OS_config"]
             }
         }
 
@@ -110,7 +110,7 @@ filter {
                 ]
             }
             mutate {
-                    add_tag => [ "PAN-OS_System"]
+                    add_tag => [ "PAN-OS_system"]
             }
         }
 
